--- a/Resources/front/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/front/assets/js/modules/Ticket/templates/view.ejs
@@ -25,9 +25,9 @@
         </div>
         <h2>Ticket Description</h2>
         <p><%= description %></p>
-        <h2>Comments</h2>
-        <textarea class="form-control" name="" id="" rows="4"></textarea>
-        <button class="btn btn-primary">Add Comment</button>
+        <div id="comments">
+
+        </div>
     </div>
     <div class="col-md-4 ticket-aside">
         <div class="group">
