DIAM-270 Changed architecture (separate static app -> one page app)

--- a/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/assets/js/modules/Header/templates/header.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <a href="<%= baseUrl %>" class="logo col-md-6">
-    <img src="assets/img/logo.png" alt="DiamanteDesk"/>
+    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
   </a>
   <div class="col-md-6">
     <div class="profile pull-right">
