--- a/Resources/assets/js/modules/SessionManager/templates/login.ejs
+++ b/Resources/assets/js/modules/SessionManager/templates/login.ejs
@@ -1,5 +1,5 @@
     <a href="<%= baseUrl %>" class="logo">
-        <img src="assets/img/logo.png" alt="DiamanteDesk"/>
+        <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
     </a>
     <form role="form">
         <div class="form-group">
