--- a/Resources/assets/less/main.less
+++ b/Resources/assets/less/main.less
@@ -1,4 +1,4 @@
-@import "bootstrap.less"; // custom bootstrap core file that remove glyphicons support
+@import "bootstrap"; // custom bootstrap core file that remove glyphicons support
 @import "../js/vendor/fontawesome/less/font-awesome";
 @import "variables";
 
