--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -38,11 +38,11 @@
                     form_row(form.branch),
                     form_row(form.subject),
                     form_row(form.status),
-                    form_row(form.files),
                     form_row(form.priority),
                     form_row(form.source),
                     form_row(form.reporter),
-                    form_row(form.assignee)
+                    form_row(form.assignee),
+                    form_row(form.files)
                 ]
             }
         ]
