--- a/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/assets/js/modules/Header/templates/header.ejs
@@ -10,9 +10,9 @@
       </button>
     </div>
     <div class="quick-access pull-right">
-      <div class="search-field form-group form-group-lg">
-        <input type="search" class="form-control" placeholder="Search"/>
-      </div>
+      <form class="search-field form-group form-group-lg js-search-form">
+        <input type="search" class="form-control js-search-input" name="search" placeholder="Search"/>
+      </form>
       <div class="create-ticket form-group form-group-lg">
         <button class="btn btn btn-primary js-create-ticket">Add New Ticket</button>
       </div>
