DIAM-444 added icons for status and move buttons

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -103,7 +103,7 @@
         {{ UI.clientButton({
             'dataUrl': path('diamante_ticket_status_change', { 'id': entity.id }),
             'aCss': 'no-hash',
-            'iCss': 'icon-edit',
+            'iCss': 'icon-status',
             'dataId': entity.id,
             'title' : changeStatusTitle,
             'label' : changeStatusTitle,
@@ -144,7 +144,7 @@
         {{ UI.clientButton({
             'dataUrl': path('diamante_ticket_move', { 'id': entity.id }),
             'aCss': 'no-hash',
-            'iCss': 'icon-edit',
+            'iCss': 'icon-move',
             'dataId': entity.id,
             'title' : moveTitle,
             'label' : moveTitle,
