DIAM-449 Clean up Ticket and Comment commands from $files parameter

--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -52,7 +52,7 @@
                     form_row(form.content),
                     form_row(form.ticketStatus),
                     attachmentListWidget,
-                    form_row(form.files)
+                    form_row(form.attachmentsInput)
                 ]
             }
         ]
