--- a/Resources/views/Ticket/attach.html.twig
+++ b/Resources/views/Ticket/attach.html.twig
@@ -37,7 +37,7 @@
             {
                 'title': 'diamante.desk.attachment.entity_label'|trans,
                 'data': [
-                    form_row(form.files),
+                    form_row(form.attachmentsInput),
                 ]
             }
         ]
