--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -38,7 +38,7 @@
                     form_row(form.branch),
                     form_row(form.subject),
                     form_row(form.status),
-                    form_row(form.files),
+                    form_row(form.attachmentsInput),
                     form_row(form.priority),
                     form_row(form.source),
                     form_row(form.reporter),
