--- a/Resources/views/Ticket/update.html.twig
+++ b/Resources/views/Ticket/update.html.twig
@@ -45,7 +45,7 @@
                 'data': [
                     form_row(form.subject),
                     form_row(form.status),
-                    form_row(form.files),
+                    form_row(form.attachmentsInput),
                     form_row(form.priority),
                     form_row(form.source),
                     form_row(form.reporter),
