DIAM-292 sorting for tickets grid

--- a/Resources/assets/js/modules/Ticket/templates/list.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list.ejs
@@ -1,11 +1,9 @@
 <thead>
   <tr>
-      <th class="created_at">Date</th>
-      <th class="subject">Subject</th>
-      <th class="priority">Priority</th>
-      <th class="status">Status</th>
+    <th class="createdAt"><%= sorterState('createdAt') %> Date</th>
+    <th class="subject"><%= sorterState('subject') %> Subject</th>
+    <th class="priority"><%= sorterState('priority') %> Priority</th>
+    <th class="status"><%= sorterState('status') %> Status</th>
   </tr>
 </thead>
-<tbody>
-
-</tbody>
+<tbody></tbody>
