--- a/Resources/assets/js/modules/Ticket/templates/list-item.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/list-item.ejs
@@ -1,4 +1,4 @@
-<td class="created_at"><%= created %></td>
+<td class="createdAt"><%= created %></td>
 <td class="subject"><%= subject %></td>
 <td class="priority"><%= priority %></td>
 <td class="status"><%= status %></td>
