DIAM-506: Fix issue with displaying tickets with long names

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -243,11 +243,6 @@
     white-space: nowrap
 }
 
-
-.diam-branch-grid td:nth-last-child(n+3){
-    padding-right: 78px;
-}
-
 .diam-branch-grid th.string-cell, td.string-cell{
     vertical-align: middle;
 }
@@ -282,14 +277,12 @@
     clear: none;
 }
 
-.diam-branch-grid td:first-child {
-    width: 150px;
-}
-
-.diam-branch-grid td:nth-child(2) {
-    width: 22%;
-}
-
-.grid .datetime-cell {
+.diam-tickets .row-click-action > .datetime-cell,
+.diam-tickets .row-click-action > .select-row-cell,
+.diam-tickets .row-click-action > .action-cell {
     vertical-align: middle;
+}
+
+.diam-tickets .row-click-action > .string-cell:nth-child(2) {
+    width: 5%;
 }
