--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -101,7 +101,7 @@
         'subblocks': [
             {
                 'title' : null,
-                'data' : [dataGrid.renderGrid('diamante-branch-tickets-grid', { branch: entity.id }, { cssClass: 'inner-grid' })],
+                'data' : [dataGrid.renderGrid('diamante-branch-tickets-grid', { branch: entity.id }, { cssClass: 'inner-grid diam-tickets' })],
                 'useSpan': false
             }
         ]
