--- a/Resources/views/Ticket/list.html.twig
+++ b/Resources/views/Ticket/list.html.twig
@@ -36,7 +36,7 @@
                     </table>
                 </div>
                 <div class="content" style="background-color: #fff;">
-                    {{ dataGrid.renderGrid(gridName) }}
+                    {{ dataGrid.renderGrid(gridName, {}, {cssClass:'diam-tickets'}) }}
                 </div>
             </div>
         </div>
