DIAM-426: Create frontend controller

--- a/Resources/views/embeddedForm.html.twig
+++ b/Resources/views/embeddedForm.html.twig
@@ -22,7 +22,7 @@
         {{ form_row(form.description) }}
     </div>
     <div class="row-group">
-        {{ form_row(form.files) }}
+        {{ form_row(form.attachmentsInput) }}
     </div>
     <div class="row-group">
         {{ form_widget(form.submit) }}
