DIAM-354 add italic font style if fields is empty

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -286,3 +286,7 @@
 .diam-tickets .row-click-action > .string-cell:nth-child(2) {
     width: 5%;
 }
+
+.control-label > span, .responsive-cell > span {
+    font-style: italic;
+}
