--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -28,7 +28,7 @@
                     {% set defaultAvatar = asset('bundles/oroui/img/info-user.png') %}
                     <img src="{{ (avatar is defined and avatar != '' ) ? avatar : defaultAvatar }}" alt="{{ author|oro_format_name }}">
                 </div>
-                <div class="diam-comment-meta">{{ author|oro_format_name }} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
+                <div class="diam-comment-meta">{% if comment.author.isOroUser %} {{ author|oro_format_name }} {% else %} {{ author.firstName }} {{ author.lastName }} {% endif %} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
                 <div class="diam-comment-content">{{ comment.content|escape('html')|nl2br }}</div>
                 {% if comment.attachments is not empty %}
                     <div class="diam-comment-attachments-box">
