--- a/Resources/assets/less/layout/header.less
+++ b/Resources/assets/less/layout/header.less
@@ -44,3 +44,12 @@
     max-height: 100%;
   }
 }
+
+@media (max-width: @screen-xs-max) {
+  #header {
+    position: static;
+    .logo {
+      text-align: center;
+    }
+  }
+}
