--- a/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/assets/js/modules/Header/templates/header.ejs
@@ -1,8 +1,8 @@
 <div class="row">
-  <a href="<%= baseUrl %>" class="logo col-md-6">
+  <a href="<%= baseUrl %>" class="logo col-sm-6">
     <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
   </a>
-  <div class="col-md-6">
+  <div class="col-sm-6">
     <div class="profile pull-right">
       <button class="btn btn-link dropdown-toggle" type="button" id="dropdown-profile" data-toggle="dropdown">
         Jason Flinstone
