DIAM-466 form validation

--- a/Resources/assets/js/modules/Comment/templates/form.ejs
+++ b/Resources/assets/js/modules/Comment/templates/form.ejs
@@ -1,4 +1,6 @@
 <form action="/" role="form">
-    <textarea class="form-control" name="content" id="comment-content" rows="4"></textarea>
+    <div class="form-group">
+        <textarea class="form-control" name="content" id="comment-content" rows="4"></textarea>
+    </div>
     <button type="submit" class="btn btn-primary js-add-comment js-submit">Add Comment</button>
 </form>
