--- a/Resources/assets/js/modules/SessionManager/templates/login.ejs
+++ b/Resources/assets/js/modules/SessionManager/templates/login.ejs
@@ -3,11 +3,11 @@
     </a>
     <form role="form">
         <div class="form-group">
-            <label for="username">Login</label>
+            <label class="control-label" for="username">Login</label>
             <input type="text" class="form-control input-lg" id="username" name="username" placeholder="Enter Login">
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
+            <label class="control-label" for="password">Password</label>
             <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password">
         </div>
         <div class="checkbox">
