--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -2,7 +2,7 @@
 {% import 'OroUIBundle::macros.html.twig' as macros %}
 {% import 'OroTagBundle::macros.html.twig' as _tag %}
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
-{% oro_title_set({params : {"%ticket.subject%": entity.subject }}) %}
+{% oro_title_set({params : {"%ticket.key%": entity.key, "%ticket.subject%": entity.subject}}) %}
 {% macro renderComments(entity) %}
     {% set comments = entity.comments %}
     {% import 'OroUIBundle::macros.html.twig' as UI %}
