--- a/Resources/assets/js/modules/Comment/templates/form.ejs
+++ b/Resources/assets/js/modules/Comment/templates/form.ejs
@@ -1,6 +1,10 @@
 <form action="/" role="form">
     <div class="form-group">
-        <textarea class="form-control" name="content" id="comment-content" rows="4"></textarea>
+        <textarea class="form-control" name="content" id="comment-content" rows="4"><%= content %></textarea>
     </div>
+    <% if(!content){ %>
     <button type="submit" class="btn btn-primary js-add-comment js-submit">Add Comment</button>
+    <% } else { %>
+    <button type="submit" class="btn btn-primary js-edit-comment js-submit">Edit Comment</button>
+    <% } %>
 </form>
