DIAM-475 Bypass default branch to frontend

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -35,7 +35,8 @@
                 env : '{{ app.environment }}',
                 basePath : '{{ basePath }}',
                 baseUrl : '{{ baseUrl }}',
-                apiUrl : '{{ apiUrl }}'
+                apiUrl : '{{ apiUrl }}',
+                branchId : {{ branchId }}
             }
         }
     });
