--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -229,8 +229,12 @@
 
 {% block content_data %}
     {% set id = 'navbarTicketView' %}
-    {% set reporter = fetch_user_details(entity.reporter) %}
-    {% set reporterDisplayName = reporter.getFullName != ' ' ? reporter.getFullName : reporter.getEmail %}
+    {% set reporterDisplayName = entity.unassignedLabel|trans %}
+    {% if entity.reporter %}
+        {% set reporter = fetch_user_details(entity.reporter) %}
+        {% set reporterDisplayName = reporter.getFullName != ' ' ? reporter.getFullName : reporter.getEmail %}
+    {% endif %}
+
     {% set dataSubBlocks = [UI.attibuteRow('diamante.desk.attributes.subject'|trans, entity.subject)] %}
     {% set dataSubBlocks = dataSubBlocks|merge([UI.attibuteRow('diamante.desk.attributes.branch'|trans, entity.branchName)]) %}
     {% set dataSubBlocks = dataSubBlocks|merge([UI.attibuteRow('diamante.desk.attributes.status'|trans, entity.status.getLabel)]) %}
