--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -11,9 +11,15 @@
     <ol class="diam-comments unstyled">
         {% for comment in comments if comment.id  %}
             {% set imagePath = '' %}
-            {% set author = fetch_oro_user(comment.author) %}
-            {% if comment.author.isOroUser %}
-                {% set avatar = oro_configured_image_url(fetch_oro_user(comment.author), 'avatar') %}
+            {% set author = 'diamante.desk.comment.placeholders.deleted_user'|trans %}
+            {% if comment.author %}
+                {% set author = fetch_oro_user(comment.author) %}
+                {% if comment.author.isOroUser %}
+                    {% set author = author|oro_format_name %}
+                    {% set avatar = oro_configured_image_url(fetch_oro_user(comment.author), 'avatar') %}
+                {% else %}
+                    {% set author = author.firstName ~ ' ' ~ author.lastName %}
+                {% endif %}
             {% endif %}
             <li class="diam-comment">
                 <div class="pull-right">
@@ -26,9 +32,9 @@
                 </div>
                 <div class="diam-comment-user-image">
                     {% set defaultAvatar = asset('bundles/oroui/img/info-user.png') %}
-                    <img src="{{ (avatar is defined and avatar != '' ) ? avatar : defaultAvatar }}" alt="{{ author|oro_format_name }}">
+                    <img src="{{ (avatar is defined and avatar != '' ) ? avatar : defaultAvatar }}" alt="{{ author }}">
                 </div>
-                <div class="diam-comment-meta">{% if comment.author.isOroUser %} {{ author|oro_format_name }} {% else %} {{ author.firstName }} {{ author.lastName }} {% endif %} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
+                <div class="diam-comment-meta">{{ author }} {{ 'diamante.desk.comment.placeholders.added'|trans }} - {{ comment.createdAt|oro_format_datetime }}</div>
                 <div class="diam-comment-content">{{ comment.content|escape('html')|nl2br }}</div>
                 {% if comment.attachments is not empty %}
                     <div class="diam-comment-attachments-box">
