DIAM-443 comment refactoring, DIAM-471 ticket attachments

--- a/Resources/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/view.ejs
@@ -25,8 +25,8 @@
         </div>
         <h2>Ticket Description</h2>
         <p><%= description %></p>
-        <div id="comments">
-
+        <div class="block" id="comments">
+            Loading ...
         </div>
     </div>
     <div class="col-md-4 ticket-aside">
@@ -38,8 +38,8 @@
                 <button type="button" class="btn btn-primary btn-lg btn-block js-open-ticket">Reopen Ticket</button>
                 <% } %>
             </div>
-            <div class="block">
-                <h2>File Attachments</h2>
+            <div class="block" id="attachments">
+                Loading ...
             </div>
             <div class="block">
                 <h2>People</h2>
