--- a/Resources/assets/less/modules.less
+++ b/Resources/assets/less/modules.less
@@ -1,3 +1,4 @@
 @import "modules/Ticket/main";
 @import "modules/SessionManager/main";
 @import "modules/Comment/main";
+@import "modules/Attachment/main";
