DIAM-471 ticket attachments

--- a/Resources/assets/js/modules/Common/templates/alert.ejs
+++ b/Resources/assets/js/modules/Common/templates/alert.ejs
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
       <% _.each(messages, function(message){ %>
-        <div class="alert alert-danger" role="alert"><i class="fa fa-exclamation-circle"></i> <%= message %></div>
+        <div class="alert alert-danger" role="alert"><i class="fa fa-exclamation-circle"></i>&nbsp;<%= message %></div>
       <% }); %>
     </div>
   </div><!-- /.modal-content -->
