DIAM-521 User activation

--- a/Resources/views/Registration/email/confirmation.txt.twig
+++ b/Resources/views/Registration/email/confirmation.txt.twig
@@ -1,4 +1,4 @@
-Hello,
+Thank you.
 
-It is confirmation email.
-Confirm registration via {{ activation_hash}}
+Please click the link below  to confirm your email:
+{{ path('diamante_front_registration_confirm', {'hash': activation_hash}) }}
