--- a/Resources/views/Registration/email/confirmation.html.twig
+++ b/Resources/views/Registration/email/confirmation.html.twig
@@ -1,4 +1,4 @@
-Hello,
+Thank you.
 
-It is confirmation email.
-Confirm registration via <a href="{{ path('diamante_registration_confirm', {'hash': activation_hash}) }}">link</a>
+Please click the link below  to confirm your email:
+{{ path('diamante_front_registration_confirm', {'hash': activation_hash}) }}
