DIAM-509: Altered the ticket description field width.

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -290,3 +290,7 @@
 .control-label > span, .responsive-cell > span {
     font-style: italic;
 }
+
+.diam-ticket-description {
+    width: 600px;
+}
