DIAM-522 Restful controller

--- a/Resources/views/Registration/email/confirmation.html.twig
+++ b/Resources/views/Registration/email/confirmation.html.twig
@@ -1,4 +1,4 @@
 Thank you.
 
 Please click the link below  to confirm your email:
-{{ path('diamante_front_registration_confirm', {'hash': activation_hash}) }}
+{#{ path('diamante_front_registration_confirm', {'hash': activation_hash}) }#}
