DIAM-509: Made branch description field in edit mode wider too

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -291,7 +291,8 @@
     font-style: italic;
 }
 
-.diam-ticket-description {
+.diam-ticket-description,
+#diamante_branch_form_description {
     width: 600px;
 }
 
