DIAM-252 ui for registration and reset password

--- a/Resources/assets/less/modules.less
+++ b/Resources/assets/less/modules.less
@@ -1,4 +1,4 @@
 @import "modules/Ticket/main";
-@import "modules/SessionManager/main";
+@import "modules/Session/main";
 @import "modules/Comment/main";
 @import "modules/Attachment/main";
