--- a/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -11,6 +11,14 @@
         <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
     </div>
     <div class="form-group">
+        <label class="control-label" for="email">First Name</label>
+        <input type="text" class="form-control input-lg" id="firstname" name="firstname" placeholder="Enter First Name">
+    </div>
+    <div class="form-group">
+        <label class="control-label" for="email">Last Name</label>
+        <input type="text" class="form-control input-lg" id="lastname" name="lastname" placeholder="Enter Last Name">
+    </div>
+    <div class="form-group">
         <label class="control-label" for="password">Password</label>
         <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password">
     </div>
