--- a/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -3,14 +3,6 @@
 </a>
 <form role="form">
     <div class="form-group">
-        <label class="control-label" for="username">Login</label>
-        <input type="text" class="form-control input-lg" id="username" name="username" placeholder="Enter Login">
-    </div>
-    <div class="form-group">
-        <label class="control-label" for="email">Email</label>
-        <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
-    </div>
-    <div class="form-group">
         <label class="control-label" for="email">First Name</label>
         <input type="text" class="form-control input-lg" id="firstname" name="firstname" placeholder="Enter First Name">
     </div>
@@ -19,8 +11,12 @@
         <input type="text" class="form-control input-lg" id="lastname" name="lastname" placeholder="Enter Last Name">
     </div>
     <div class="form-group">
+        <label class="control-label" for="email">Email</label>
+        <input type="email" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
+    </div>
+    <div class="form-group">
         <label class="control-label" for="password">Password</label>
-        <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password">
+        <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Enter Password">
     </div>
     <p>Already have account? &mdash; <a href="#login">Sign in</a></p>
     <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Continue</button>
