--- a/Resources/assets/js/modules/Session/templates/login.ejs
+++ b/Resources/assets/js/modules/Session/templates/login.ejs
@@ -3,8 +3,8 @@
 </a>
 <form role="form">
     <div class="form-group">
-        <label class="control-label" for="username">Login</label>
-        <input type="text" class="form-control input-lg" id="username" name="username" placeholder="Enter Login">
+        <label class="control-label" for="email">Email</label>
+        <input type="text" class="form-control input-lg" id="email" name="email" placeholder="Enter Email">
     </div>
     <div class="form-group">
         <label class="control-label" for="password">Password</label>
