--- a/Resources/assets/js/modules/Session/templates/reset.ejs
+++ b/Resources/assets/js/modules/Session/templates/reset.ejs
@@ -1,6 +1,16 @@
 <a href="<%= baseUrl %>" class="logo">
   <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
 </a>
+<% if(typeof hash !== 'undefined') { %>
+<form role="form">
+  <input name="hash" type="hidden" value="<%= hash %>"/>
+  <div class="form-group">
+    <label class="control-label" for="password">New Password</label>
+    <input type="text" class="form-control input-lg" id="password" name="password" placeholder="Enter New Password">
+  </div>
+  <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Create New Password</button>
+</form>
+<% } else { %>
 <form role="form">
   <div class="form-group">
     <label class="control-label" for="email">Email</label>
@@ -8,3 +18,4 @@
   </div>
   <button type="submit" class="btn btn-primary btn-lg btn-block js-submit">Reset Password</button>
 </form>
+<% } %>
