DIAM-544 add checkbox for private comment

--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -52,7 +52,8 @@
                     form_row(form.content),
                     form_row(form.ticketStatus),
                     attachmentListWidget,
-                    form_row(form.attachmentsInput)
+                    form_row(form.attachmentsInput),
+                    form_row(form.private)
                 ]
             }
         ]
