--- a/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/Resources/assets/js/modules/Header/templates/header.ejs
@@ -3,11 +3,8 @@
     <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
   </a>
   <div class="col-sm-6">
-    <div class="profile pull-right">
-      <button class="btn btn-link dropdown-toggle" type="button" id="dropdown-profile" data-toggle="dropdown">
-        Jason Flinstone
-        <span class="caret"></span>
-      </button>
+    <div id="profile" class="profile pull-right">
+      <span class="loading">loading...</span>
     </div>
     <div class="quick-access pull-right">
       <form class="search-field form-group form-group-lg js-search-form">
