--- a/Resources/assets/js/modules/Session/templates/registration.ejs
+++ b/Resources/assets/js/modules/Session/templates/registration.ejs
@@ -3,12 +3,12 @@
 </a>
 <form role="form">
     <div class="form-group">
-        <label class="control-label" for="email">First Name</label>
-        <input type="text" class="form-control input-lg" id="firstname" name="firstname" placeholder="Enter First Name">
+        <label class="control-label" for="first_name">First Name</label>
+        <input type="text" class="form-control input-lg" id="first_name" name="first_name" placeholder="Enter First Name">
     </div>
     <div class="form-group">
-        <label class="control-label" for="email">Last Name</label>
-        <input type="text" class="form-control input-lg" id="lastname" name="lastname" placeholder="Enter Last Name">
+        <label class="control-label" for="last_name">Last Name</label>
+        <input type="text" class="form-control input-lg" id="last_name" name="last_name" placeholder="Enter Last Name">
     </div>
     <div class="form-group">
         <label class="control-label" for="email">Email</label>
