--- a/Resources/views/ResetPassword/email/reset.txt.twig
+++ b/Resources/views/ResetPassword/email/reset.txt.twig
@@ -1,3 +1,3 @@
 We were told that you forgot your password. To restore your password click on link below
 
-{{ path('diamante_front_reset_password', {'hash': activation_hash}) }}
+{{ url('diamante_front') }}#newpassword/{{ activation_hash }}
