DIAM-256 UI&logic for edit user

--- a/Resources/assets/js/modules/User/templates/user.ejs
+++ b/Resources/assets/js/modules/User/templates/user.ejs
@@ -1,3 +1,6 @@
-<button class="btn btn-link dropdown-toggle" type="button" id="dropdown-profile" data-toggle="dropdown">
+<button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown">
   <%= first_name %> <%= last_name %><span class="caret"></span>
 </button>
+<div class="dropdown-menu dropdown-menu-right" id="dropdown-profile">
+  loading...
+</div>
