DIAM-472 add comments attachments, edit comments attachmetns DIAM-471 create new ticket with attachments

--- a/Resources/assets/js/modules/Comment/templates/item.ejs
+++ b/Resources/assets/js/modules/Comment/templates/item.ejs
@@ -5,10 +5,20 @@
 </ul>
 <% } %>
 <strong>
-    <% if(typeof authorFullName !== 'undefined') { %>
-    <%= authorFullName  %>
+    <% if(typeof authorName !== 'undefined') { %>
+    <%= authorName  %>
     <% } else { %>
     Loading...
     <% } %>
 </strong> <%= content %>
 <p><small><%= created %></small></p>
+<% if(attachments && attachments.length) { %>
+<div class="comment-attachments-block">
+  <strong>File attachments:</strong>
+  <ul class="comment-attachments">
+    <% _.each(attachments, function(attachment){ %>
+    <li><%= attachment.filename %></li>
+    <% }); %>
+  </ul>
+</div>
+<% } %>
