--- a/Resources/assets/less/modules/Attachment/dropzone.less
+++ b/Resources/assets/less/modules/Attachment/dropzone.less
@@ -3,6 +3,7 @@
   border: 1px #979797 dashed;
   border-radius: 5px;
   position: relative;
+  overflow: hidden;
 }
 .dropzone-label {
   font-weight: normal;
