--- a/Resources/assets/js/modules/Comment/templates/form.ejs
+++ b/Resources/assets/js/modules/Comment/templates/form.ejs
@@ -2,6 +2,8 @@
     <div class="form-group">
         <textarea class="form-control" name="content" id="comment-content" rows="4"><%= content %></textarea>
     </div>
+    <div id="comment-attachment"></div>
+    <div id="comment-attachment-drop"></div>
     <% if(!content){ %>
     <button type="submit" class="btn btn-primary js-add-comment js-submit">Add Comment</button>
     <% } else { %>
