DIAM-616 add document title DIAM-631 change logo

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Diamante</title>
     <link rel="stylesheet" href="{{ asset('bundles/diamantefront/css/main.css') }}" type="text / css"/>
 </head>
 <body>
@@ -36,7 +36,9 @@
                 basePath : '{{ basePath }}',
                 baseUrl : '{{ baseUrl }}',
                 apiUrl : '{{ apiUrl }}',
-                branchId : {{ branchId }}
+                branchId : {{ branchId }},
+                logo : '{{ basePath }}/bundles/diamantefront/img/logo.png',
+                title : 'Diamante'
             }
         }
     });
