DIAM-618 remove unused UI elements

--- a/Resources/assets/js/modules/Ticket/templates/view.ejs
+++ b/Resources/assets/js/modules/Ticket/templates/view.ejs
@@ -10,11 +10,11 @@
     <div class="col-md-8">
         <div class="ticket-actions pull-right">
             <button class="btn btn-primary js-edit-ticket">Edit Ticket</button>
-            <button class="btn btn-primary">Join Ticket</button>
-            <div class="btn-group">
+            <!--button class="btn btn-primary">Join Ticket</button-->
+            <!--div class="btn-group">
                 <div class="btn btn-primary">6</div>
                 <button class="btn btn-primary">Vote</button>
-            </div>
+            </div-->
         </div>
         <div class="ticket-meta">
             <div class="row">
@@ -41,21 +41,21 @@
             <div class="block" id="attachments">
                 Loading ...
             </div>
-            <div class="block">
+            <!--div class="block">
                 <h2>People</h2>
                 <ul class="list-unstyled">
                     <li><a href="#">Tony Anderson</a></li>
                 </ul>
                 <button type="button" class="btn btn-primary btn-sm">Add Collaborator</button>
-            </div>
+            </div-->
         </div>
-        <div class="group">
+        <!--div class="group">
             <div class="block">
                 <h2>Submited by</h2>
                 <ul class="list-unstyled">
                     <li><a href="#"><%= reporter.first_name %> <%= reporter.last_name %></a></li>
                 </ul>
             </div>
-        </div>
+        </div-->
     </div>
 </div>
